--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#ffd700",
   "icons": [
     {
-      "src": "icon.png",,
+      "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
