--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Marina's shopping-list Pro",
   "short_name": "Marina's shopping",
-  "start_url": "/Marina's shopping/",
+  "start_url": "/Neon-Planner/",
   "display": "standalone",
   "background_color": "#0f0c29",
   "theme_color": "#ffd700",
