--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Marina's shopping-list Pro",
-  "short_name": "Marina's shopping",
+  "name": "Neon Planner Pro",
+  "short_name": "Neon",
   "start_url": "/Neon-Planner/",
   "display": "standalone",
   "background_color": "#0f0c29",
